--- a/lab-sql-query-from-table-names-continued.ipynb
+++ b/lab-sql-query-from-table-names-continued.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "a03f026a",
    "metadata": {
     "id": "a03f026a"
@@ -21,8 +21,9 @@
    "source": [
     "from openai import OpenAI\n",
     "import os\n",
+    "\n",
     "from dotenv import load_dotenv, find_dotenv\n",
-    "_ = load_dotenv(find_dotenv())\n",
+    "_ = load_dotenv(find_dotenv('../../open_ai.env')) # read the env file from parent directory\n",
     "\n",
     "OPENAI_API_KEY  = os.getenv('OPENAI_API_KEY')"
    ]
@@ -39,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "id": "922f8d24",
    "metadata": {
     "id": "922f8d24"
@@ -151,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "id": "5334f942",
    "metadata": {
     "id": "5334f942"
@@ -159,14 +160,58 @@
    "outputs": [],
    "source": [
     "context = [ {'role':'system', 'content':\"\"\"\n",
-    " CREATE SEVERAL (3+) TABLES HERE\n",
-    "\"\"\"} ]\n",
-    "\n"
+    "You are an expert SQL assistant. Generate valid SQLite queries based on user questions.\n",
+    "Always provide clear, efficient SQL commands followed by a brief explanation.\n",
+    "\n",
+    "Database Schema:\n",
+    "\n",
+    "-- Table: employees\n",
+    "CREATE TABLE employees (\n",
+    "    ID_usr INTEGER PRIMARY KEY,\n",
+    "    name VARCHAR(100) NOT NULL\n",
+    ");\n",
+    "\n",
+    "-- Table: salary\n",
+    "CREATE TABLE salary (\n",
+    "    ID_usr INTEGER NOT NULL,\n",
+    "    year DATE NOT NULL,\n",
+    "    salary FLOAT NOT NULL,\n",
+    "    PRIMARY KEY (ID_usr, year),\n",
+    "    FOREIGN KEY (ID_usr) REFERENCES employees(ID_usr)\n",
+    ");\n",
+    "\n",
+    "-- Table: studies\n",
+    "CREATE TABLE studies (\n",
+    "    ID INTEGER PRIMARY KEY,\n",
+    "    ID_usr INTEGER NOT NULL,\n",
+    "    educational_level INTEGER,\n",
+    "    Institution VARCHAR(200),\n",
+    "    Years DATE,\n",
+    "    Speciality VARCHAR(100),\n",
+    "    FOREIGN KEY (ID_usr) REFERENCES employees(ID_usr)\n",
+    ");\n",
+    "\n",
+    "-- Sample Data:\n",
+    "-- employees: ID_usr, name\n",
+    "-- 1, 'John Smith'\n",
+    "-- 2, 'Maria Garcia'\n",
+    "-- 3, 'James Johnson'\n",
+    "\n",
+    "-- salary: ID_usr, year, salary\n",
+    "-- 1, '2023-01-01', 75000.00\n",
+    "-- 2, '2023-01-01', 82000.00\n",
+    "-- 3, '2023-01-01', 68000.00\n",
+    "\n",
+    "-- studies: ID, ID_usr, educational_level, Institution, Years, Speciality\n",
+    "-- 1, 1, 4, 'MIT', '2015-01-01', 'Computer Science'\n",
+    "-- 2, 2, 5, 'Stanford', '2016-01-01', 'Data Science'\n",
+    "-- 3, 3, 3, 'UC Berkeley', '2018-01-01', 'Business Administration'\n",
+    "\"\"\"} ]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "id": "330e69b0-3f5f-4bb2-8185-aedded2bb993",
    "metadata": {
     "id": "330e69b0-3f5f-4bb2-8185-aedded2bb993"
@@ -175,15 +220,51 @@
    "source": [
     "#FEW SHOT SAMPLES\n",
     "context.append( {'role':'system', 'content':\"\"\"\n",
-    " -- Maintain the SQL order simple and efficient as you can, using valid SQL Lite, answer the following questions for the table provided above.\n",
-    "WRITE IN YOUR CONTEXT QUERIES HERE\n",
+    "-- Maintain the SQL simple and efficient using valid SQLite syntax.\n",
+    "\n",
+    "-- Example 1:\n",
+    "-- Question: Show me all employee names\n",
+    "-- SQL:\n",
+    "SELECT name FROM employees;\n",
+    "\n",
+    "-- Example 2:\n",
+    "-- Question: What is the average salary in 2023?\n",
+    "-- SQL:\n",
+    "SELECT AVG(salary) as average_salary \n",
+    "FROM salary \n",
+    "WHERE year = '2023-01-01';\n",
+    "\n",
+    "-- Example 3:\n",
+    "-- Question: List employees with their salaries for 2023\n",
+    "-- SQL:\n",
+    "SELECT e.name, s.salary \n",
+    "FROM employees e \n",
+    "JOIN salary s ON e.ID_usr = s.ID_usr \n",
+    "WHERE s.year = '2023-01-01';\n",
+    "\n",
+    "-- Example 4:\n",
+    "-- Question: Which employees have a Master's degree or higher (educational_level >= 5)?\n",
+    "-- SQL:\n",
+    "SELECT DISTINCT e.name, st.educational_level, st.Institution \n",
+    "FROM employees e \n",
+    "JOIN studies st ON e.ID_usr = st.ID_usr \n",
+    "WHERE st.educational_level >= 5;\n",
+    "\n",
+    "-- Example 5:\n",
+    "-- Question: Show employees with their education and current salary\n",
+    "-- SQL:\n",
+    "SELECT e.name, st.Institution, st.Speciality, s.salary \n",
+    "FROM employees e \n",
+    "LEFT JOIN studies st ON e.ID_usr = st.ID_usr \n",
+    "LEFT JOIN salary s ON e.ID_usr = s.ID_usr \n",
+    "WHERE s.year = '2023-01-01';\n",
     "\"\"\"\n",
     "})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "id": "b90f417a",
    "metadata": {
     "id": "b90f417a"
@@ -201,7 +282,7 @@
     "    newcontext.append({'role':'user', 'content':\"question: \" + user_message})\n",
     "\n",
     "    response = client.chat.completions.create(\n",
-    "            model=\"gpt-3.5-turbo\",\n",
+    "            model=\"gpt-4o-mini\",\n",
     "            messages=newcontext,\n",
     "            temperature=0,\n",
     "        )\n",
@@ -222,7 +303,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
+   "id": "5385cb5d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "q1 = 'Are employees with advanced degrees promoted or compensated faster than others?'\n",
+    "q2 = \"Which employees received salary increases after completing additional studies?\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "59e8202c-ce34-487e-9037-c65a263423ed",
    "metadata": {
     "colab": {
@@ -236,25 +328,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "SQL:\n",
       "```sql\n",
-      "SELECT e.name\n",
-      "FROM employees e\n",
-      "JOIN salary s ON e.ID_Usr = s.ID_Usr\n",
-      "ORDER BY s.salary DESC\n",
-      "LIMIT 1;\n",
-      "```\n"
+      "SELECT e.name, st.educational_level, s.salary \n",
+      "FROM employees e \n",
+      "LEFT JOIN studies st ON e.ID_usr = st.ID_usr \n",
+      "LEFT JOIN salary s ON e.ID_usr = s.ID_usr \n",
+      "WHERE s.year = '2023-01-01' \n",
+      "ORDER BY st.educational_level DESC, s.salary DESC;\n",
+      "```\n",
+      "\n",
+      "Explanation:\n",
+      "This query retrieves the names of employees along with their educational levels and salaries for the year 2023. It uses LEFT JOINs to include all employees, even those without studies or salary records. The results are ordered by educational level (higher degrees first) and salary (higher salaries first), which can help analyze if employees with advanced degrees are compensated better.\n"
      ]
     }
    ],
    "source": [
     "#new\n",
     "context_user = context.copy()\n",
-    "print(return_CCRMSQL(\"\"\"YOUR QUERY HERE\"\"\", context_user))"
+    "print(return_CCRMSQL(q1, context_user))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 13,
    "id": "9c4766b1-48a9-456e-bc6c-4b6f41909aa4",
    "metadata": {
     "colab": {
@@ -268,28 +365,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "This is your SQL:\n",
-      "```sql\n",
-      "SELECT e.name\n",
-      "FROM employees e\n",
-      "JOIN salary s ON e.ID_usr = s.ID_usr\n",
-      "ORDER BY s.salary DESC\n",
-      "LIMIT 1;\n",
-      "```\n",
-      "\n",
-      "This SQL query retrieves the name of the employee who is best paid by joining the \"employees\" table with the \"salary\" table on the ID_usr field. It then orders the result by salary in descending order and limits the output to only one row, which corresponds to the employee with the highest salary.\n"
+      "That's an interesting question! Please ask something SQL-related.\n"
      ]
     }
    ],
    "source": [
     "#old\n",
     "old_context_user = old_context.copy()\n",
-    "print(return_CCRMSQL(\"YOUR QUERY HERE\", old_context_user))"
+    "print(return_CCRMSQL(q1, old_context_user))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "id": "38d8d370-0524-4a28-bd54-5e5cddb08e2c",
    "metadata": {
     "colab": {
@@ -304,25 +392,26 @@
      "output_type": "stream",
      "text": [
       "```sql\n",
-      "SELECT st.Institution, AVG(sa.salary) AS avg_salary\n",
-      "FROM studies st\n",
-      "JOIN employees e ON st.ID_Usr = e.ID_Usr\n",
-      "JOIN salary sa ON e.ID_Usr = sa.ID_Usr\n",
-      "GROUP BY st.Institution\n",
-      "ORDER BY avg_salary DESC\n",
-      "LIMIT 1;\n",
-      "```\n"
+      "SELECT e.name, s1.salary AS previous_salary, s2.salary AS current_salary, st.Institution, st.Speciality\n",
+      "FROM employees e\n",
+      "JOIN studies st ON e.ID_usr = st.ID_usr\n",
+      "JOIN salary s1 ON e.ID_usr = s1.ID_usr AND s1.year < st.Years\n",
+      "JOIN salary s2 ON e.ID_usr = s2.ID_usr AND s2.year = '2023-01-01'\n",
+      "WHERE s2.salary > s1.salary;\n",
+      "```\n",
+      "\n",
+      "This query retrieves the names of employees who received salary increases after completing additional studies. It joins the `employees`, `studies`, and `salary` tables to compare the salary before and after the completion of their studies, ensuring that the current salary is greater than the previous salary.\n"
      ]
     }
    ],
    "source": [
     "#new\n",
-    "print(return_CCRMSQL(\"YOUR QUERY HERE\", context_user))"
+    "print(return_CCRMSQL(q2, context_user))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 16,
    "id": "5aa318d4-dd9f-41db-8ff4-c1d87220f766",
    "metadata": {
     "colab": {
@@ -337,22 +426,22 @@
      "output_type": "stream",
      "text": [
       "This is your SQL:\n",
+      "\n",
       "```sql\n",
-      "SELECT s.Institution\n",
-      "FROM studies s\n",
-      "JOIN salary sa ON s.ID_usr = sa.ID_usr\n",
-      "GROUP BY s.Institution\n",
-      "ORDER BY AVG(sa.salary) DESC\n",
-      "LIMIT 1;\n",
+      "SELECT e.name, s.salary, st.educational_level\n",
+      "FROM employees e\n",
+      "JOIN salary s ON e.ID_usr = s.ID_usr\n",
+      "JOIN studies st ON e.ID_usr = st.ID_usr\n",
+      "WHERE st.educational_level > (SELECT MAX(educational_level) FROM studies WHERE ID_usr = e.ID_usr);\n",
       "```\n",
       "\n",
-      "This SQL query joins the \"studies\" and \"salary\" tables on the ID_usr column. It then calculates the average salary for each institution, orders the results in descending order based on the average salary, and returns the institution with the highest average salary.\n"
+      "This query retrieves employees who have completed additional studies and checks if their educational level is higher than their previous level, indicating a potential salary increase.\n"
      ]
     }
    ],
    "source": [
     "#old\n",
-    "print(return_CCRMSQL(\"YOUR QUERY HERE\", old_context_user))"
+    "print(return_CCRMSQL(q2, old_context_user))"
    ]
   },
   {
@@ -370,6 +459,50 @@
     "     - Were there variations that didn't work well? i.e., where GPT either hallucinated or wrong.\n",
     "     - What did you learn?"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b91e798f",
+   "metadata": {},
+   "source": [
+    "Key Learnings from the Text-to-SQL Research:\n",
+    "1. Schema Representation Matters\n",
+    "\n",
+    "Normalized CREATE TABLE syntax outperforms JSON or other formats\n",
+    "Standard SQL syntax reduces token count and improves accuracy\n",
+    "The model understands database structure better when presented in familiar SQL format\n",
+    "2. Relationships Are Critical\n",
+    "\n",
+    "Foreign keys significantly improve performance (71.8% → 73.1% for Codex)\n",
+    "Explicitly defining table relationships helps the model generate correct JOINs\n",
+    "Without foreign keys, models struggle to understand which tables connect and how\n",
+    "3. Sample Data Is Essential\n",
+    "\n",
+    "Including sample rows helps models understand data types and content\n",
+    "SelectCol format (column-first listing) works better than INSERT statements\n",
+    "Sample data prevents hallucination of column names or incorrect value assumptions\n",
+    "Models can infer data patterns (e.g., date formats, naming conventions)\n",
+    "4. Few-Shot Examples Are Powerful\n",
+    "\n",
+    "Providing 3-5 example query pairs dramatically improves accuracy\n",
+    "Examples teach the model:\n",
+    "Your preferred SQL style and syntax\n",
+    "How to handle JOINs properly\n",
+    "Common query patterns for your schema\n",
+    "Edge cases and best practices\n",
+    "5. Consistency Prevents Errors\n",
+    "\n",
+    "Fixed inconsistencies (nombre vs name, tablename vs tableName) reduce confusion\n",
+    "Specifying SQLite dialect explicitly prevents syntax errors\n",
+    "Clear naming conventions help the model generate more accurate queries\n",
+    "Practical Impact:\n",
+    "The old prompt used JSON format without foreign keys or examples, which likely caused the model to:\n",
+    "\n",
+    "Generate incorrect JOIN conditions\n",
+    "Hallucinate column names (mixing \"nombre\" and \"name\")\n",
+    "Use wrong SQL dialect syntax\n",
+    "Miss obvious table relationships\n"
+   ]
   }
  ],
  "metadata": {
@@ -378,7 +511,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -392,7 +525,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.6"
   }
  },
  "nbformat": 4,
